# numinal

./: .gitignore  README.md
PL/: Makefile  euclid.cpp  heat_flow.cpp  polynom.cpp  sqrt_a.cpp
hw1/: Makefile  assertion_helper.h  finite_difference.cpp  gauss.cpp  gauss_eigen.cpp  gauss_elim_pp.cpp  inv_e.cpp  ldl.cpp  lu.cpp  pi.cpp  prob1.txt  prob3.txt  prob5.txt  prob6.txt  prob7.csv  prob7.txt
hw2/: s91.cpp
hw2/oct/: householder.m  inverse_power_method.m  lu_factor.m  wielandt_deflation.m
hw2/output/: s92.txt  s93.txt  s94.txt
hw2/src/: CMakeLists.txt  Makefile  direct_methods.cpp  direct_methods.hpp  eigen.cpp  eigen.hpp  s91.cpp  s92.cpp  s93.cpp  s94.cpp
hw2/test/: CMakeLists.txt  test_lu.cpp
hw3/matlab/: helmholtz.m  helmholtz_N-16.csv  helmholtz_N-64.csv  hw3_prob1__wrapper_.m
hw3/output/: CMakeCache.txt  grid_N-16.txt  h16_approx.dsv  h16_cg_approx.dsv  h16_conj_grad.dsv  h16_gauss.dsv  h16_gsor.dsv  h16_jacobi.dsv  h16_precond_conj_grad_1e-6.dsv  h64_approx.dsv  h64_cg_approx.dsv  h64_conj_grad.dsv  h64_gauss.dsv  h64_gsor.dsv  h64_jacobi.dsv  h64_precond_conj_grad_1e-6.dsv  helmholtz_N-16.csv  hw3i.txt  out.txt  plot-all.gnu  plot-all_indvs.gnu  plot-h.gnu  test_jacobi_2014-08-25.txt
hw3/scripts/: setup_build.sh  setup_test.sh
hw3/src/: CMakeLists.txt  direct_methods.hpp  eigen.hpp  extra-credit.cpp  fi.cpp  finite_difference.cpp  finite_difference.hpp  h.cpp  i.cpp  iterative.cpp  iterative.hpp  main.cpp  test_solve_bvp_by_conj_grad_precond.cpp
hw3/test/: CMakeLists.txt  test_conj_grad_sd.cpp  test_jacobi.cpp
share/: assignment_helpers.hpp  lin_alg_helpers.cpp  lin_alg_helpers.hpp  numinal_config.hpp
